[package]
name = "popularity-tweet-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.2.3"
chrono = "0.4.31"
futures = "0.3.28"
hyper = { version = "0.14", features = ["full"] }
lambda_runtime = "0.6.0"
lazy_static = "1.4.0"
pinecone = "0.2.5"
redis = "0.23.3"
regex = "1.9.6"
reqwest = { version = "0.11.20", features = ["rustls-tls"], default-features = false }
serde = "1.0.136"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2.4.1"
